# revelations

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: tests.yaml
docker/: Dockerfile
docker/qdrant/: production.yaml
src/rebelist/revelations/: main.py
src/rebelist/revelations/application/use_cases/: __init__.py  benchmark.py  data_fetcher.py  data_vectorizer.py  embedding.py  extraction.py  inference.py  semantic_search.py
src/rebelist/revelations/config/: container.py  prompts.py  prompts.yaml  settings.py
src/rebelist/revelations/domain/: __init__.py  exceptions.py  loaders.py  models.py  repositories.py  services.py
src/rebelist/revelations/handlers/: commands.py
src/rebelist/revelations/handlers/console/: __init__.py  output.py
src/rebelist/revelations/infrastructure/: monitoring.py  search_hybrid.py
src/rebelist/revelations/infrastructure/confluence/: __init__.py  adapters.py  parsers.py
src/rebelist/revelations/infrastructure/docling/: adapters.py
src/rebelist/revelations/infrastructure/filesystem/: __init__.py  loaders.py
src/rebelist/revelations/infrastructure/logging/: __init__.py  logger.py
src/rebelist/revelations/infrastructure/mongo/: __init__.py  repositories.py
src/rebelist/revelations/infrastructure/mupdf/: adapters.py
src/rebelist/revelations/infrastructure/ollama/: __init__.py  adapters.py
src/rebelist/revelations/infrastructure/qdrant/: __init__.py  adapters.py
src/rebelist/revelations/infrastructure/utilities/: html_reader.py
tests/data/: benchmark.mini.dataset.jsonl
tests/revelations/: test_main.py
tests/revelations/application/use_cases/: data_fetcher_test.py  semantic_search_test.py  test_benchmark.py  test_data_fetcher.py  test_data_vectorizer.py  test_embedding.py  test_extraction.py  test_inference.py  test_semantic_search.py
tests/revelations/domain/: models_test.py  services_test.py  test_models.py  test_repositories.py  test_services.py
tests/revelations/handlers/: test_commands.py
tests/revelations/handlers/console/: test_output.py
tests/revelations/infrastructure/confluence/: test_adapters.py  test_parsers.py
tests/revelations/infrastructure/docling/: test_adapters.py
tests/revelations/infrastructure/filesystem/: test_loaders.py
tests/revelations/infrastructure/logging/: test_logger.py
tests/revelations/infrastructure/mongo/: test_repositories.py
tests/revelations/infrastructure/mupdf/: test_adapters.py
tests/revelations/infrastructure/ollama/: adapters_test.py  test_adapters.py
tests/revelations/infrastructure/qdrant/: adapters_test.py  test_adapters.py
