[project]
name = "rebelist-revelations"
version = "0.3.0"
description = "A RAG application that scans Confluence for instant answers from your internal documentation."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "atlassian-python-api>=4.0.7,<5",
    "beautifulsoup4>=4.13,<5",
    "dependency-injector>=4.47.1,<5",
    "hatchling>=1.27.0,<2",
    "huggingface-hub>=0.34.4,<1",
    "langchain>=0.3.27,<1",
    "langchain-community>=0.3.24,<1",
    "langchain-core>=0.3.63,<1",
    "langchain-ollama>=0.3.3,<1",
    "langchain-qdrant>=0.2.0,<1",
    "langchain-text-splitters>=0.3.9,<1",
    "langchainhub>=0.1.21,<1",
    "loguru>=0.7.3,<1",
    "pre-commit>=4.2.0",
    "pydantic>=2.11.5,<3",
    "pydantic-settings>=2.9.1,<3",
    "pymongo>=4.13.0,<5",
    "pyright>=1.1.401",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "python-dotenv>=1.1.0,<2",
    "qdrant-client>=1.14.2,<2",
    "rich-click>=1.8.9,<2",
    "ruff>=0.12.1",
    "sentence-transformers>=5.1.0",
    "types-mock>=5.2.0.20250516,<6",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pyright>=1.1.405",
    "pytest>=8.4.2",
    "pytest-cov>=6.3.0",
    "pytest-mock>=3.15.0",
    "ruff>=0.12.12",
    "types-mock>=5.2.0.20250809",
]

[project.scripts]
revelations = "rebelist.revelations.main:console"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rebelist"]

### pyright ###

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["src", "tests"]
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownLambdaType = false
exclude = [
    "**/__pycache__"
]

### ruff ###

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true

[tool.ruff.lint]
select = [
    "A", # Aesthetic rules (e.g., blank lines, comment formatting)
    "E", # Errors (e.g., syntax errors, indentation issues)
    "W", # Warnings (e.g., line length, trailing whitespace)
    "F", # Pyflakes (e.g., unused imports, undefined variables)
    "I", # Import rules (e.g., import order, unused imports)
    "B", # Bugbear (e.g., potential bugs, mutable default arguments)
    "C4", # McCabe complexity (e.g., function complexity)
    "N", # Naming conventions (e.g., PEP8 naming standards)
    "D", # Docstrings (e.g., missing docstrings, formatting issues)
    "RUF100", # Mistakes (e.g., common mistakes or poor patterns)
]
ignore = [
    "ANN", # Disable all type annotation-related checks
    "PYI", # Disable checks for .pyi stub files
    "PLR", # Disable Pylint rules related to typing
    "D107", # Disable documentation on __init__ methods
    "D100", # Disable missing docstring in public module
    "D104", # Disable missing docstring in public package
    "D101", # Disable undocumented public class definitions.
]

[tool.ruff.lint.pydocstyle]
convention = "google"

### pytest ###

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--strict-markers --strict-config"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests"
]

### coverage ###

[tool.coverage.run]
branch = true
source = ["src"]
omit = [
    "*/site-packages/*",
    "*/dependency_injector/*",
    "**/__init__.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.coverage.html]
directory = "var/coverage"
